refactor(api): rename API to graph
